Added set global padding and margin to zero, add test icon and background color to nav

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,11 @@
 * {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+nav {
+  background: #000;
+  width: 60px;
 }
