--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,15 @@
 * {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 /*** HEADER ***/
 
 header {
   background: #7478BA;
+  height: 75px;
 }
 
 header h1 {
@@ -17,6 +18,7 @@ header h1 {
   font-weight: 200;
   margin: 0;
   padding: 1em 0.5em;
+  display: inline-block;
 }
 
 header h1 span {
@@ -24,9 +26,19 @@ header h1 span {
   padding: 0 0.1em;
 }
 
+.header-notification {
+  display: inline-block;
+  padding: 1.7em 0;
+  float: right;
+}
+
+.header-notification img {
+  width: 12%;
+}
+
 /*** NAVIGATION ***/
 
 nav {
   background: #000;
-  width: 60px;
+  width: 75px;
 }
