--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
-  padding: 0;
 }
 
 /*** HEADER ***/
@@ -17,23 +16,47 @@ header h1 {
   color: #fff;
   font-weight: 200;
   margin: 0;
-  padding: 1em 0.5em;
-  display: inline-block;
+  padding: 25px 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 header h1 span {
   font-weight: 600;
-  padding: 0 0.1em;
+  padding: 0 5px;
 }
+
 
 .header-notification {
-  display: inline-block;
-  padding: 1.7em 0;
-  float: right;
+position: absolute;
+top: 0;
+right: 0;
+width: 300px;
+height: 75px;
 }
 
-.header-notification img {
-  width: 12%;
+.header-notification a {
+  text-decoration: none;
+  position: relative;
+  display: inline;
+}
+
+.header-notification a img {
+  width: 25px;
+  height: 25px;
+  margin: 25px;
+}
+
+.header-notification #profile-image {
+  border-radius: 50%;
+}
+
+.header-notification a p {
+  color: #fff;
+  font-size: 16px;
+  float: right;
+  padding: 25px 10px;
 }
 
 /*** NAVIGATION ***/
