--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,92 +1,99 @@
 * {
-  box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
-  margin: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
+
 
 /*** HEADER ***/
 
 header {
-  background: #7478BA;
-  width: 100%;
-  height: 75px;
+    background: #7478BA;
+    width: 100%;
+    height: 75px;
 }
 
 header h1 {
-  font-size: 24px;
-  color: #fff;
-  font-weight: 300;
-  margin: 0;
-  padding: 25px 10px;
-  position: absolute;
-  top: 0;
-  left: 0;
+    font-size: 20px;
+    color: #fff;
+    font-weight: 300;
+    margin: 0;
+    padding: 25px 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 header h1 span {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 .header-identification {
-position: absolute;
-top: 0;
-right: 0;
-width: 250px;
-height: 75px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 75px;
+    margin: 0 5px;
 }
 
-.header-identification div,
-.header-notification img,
-.header-notification p,
-.header-profile img,
-.header-profile p {
-  display: inline-block;
+.header-identification div, .header-notification img, .header-notification p, .header-profile img, .header-profile p {
+    display: inline-block;
 }
 
 .header-notification img {
-  width: 25px;
-  height: 25px;
-  margin: 25px 15px;
+    width: 25px;
+    height: 25px;
+    margin: 25px 15px;
 }
 
 .header-notification p {
-  border-left: 0.5px solid #4D4D6F;
-  height: 45px;
-  float: right;
-  margin: 15px 5px;
+    border-left: 0.5px solid #4D4D6F;
+    height: 45px;
+    float: right;
+    margin: 15px 5px;
 }
 
 .header-profile img {
-  width: 35px;
-  height: 35px;
-  margin: 20px 10px;
-  border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    margin: 20px 10px;
+    border-radius: 50%;
 }
 
 .header-profile p {
-  color: #fff;
-  font-size: 16px;
-  font-weight: 300;
-  float: right;
-  margin: 25px 5px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    float: right;
+    margin: 25px 5px;
 }
+
 
 /*** NAVIGATION ***/
 
 nav {
-  background: #4D4D6F;
-  width: 75px;
+    background: #4D4D6F;
+    width: 75px;
 }
+
 
 /*** TABLET - 768px ***/
 
 @media screen and (min-width: 768px) {
 
+  /*** HEADER ***/
+
+    header h1 {
+        font-size: 24px;
+    }
+
+    .header-profile p {
+      font-size: 20px;
+    }
 }
 
 
 /*** DESKTOP - 1024px ***/
 
-@media screen and (min-width: 1024px) {
-  
-}
+@media screen and (min-width: 1024px) {}
