--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,14 +79,13 @@ header h1 span {
 
 nav {
     background: #4D4D6F;
-    width: 75px;
-    height: 1200px;
+    width: 100%;
     display: inline-block;
-    float: left;
+    text-align: center;
 }
 
 nav img {
-  margin: 30px 20px 15px;
+  margin: 20px 25px;
   width: 35px;
   height: 35px;
 }
@@ -95,10 +94,15 @@ nav img {
 
 main {
   display: inline-block;
-  width: 90%;
+  width: 100%;
 }
 
 /* Dashboard Search */
+
+.dashboard-search {
+  width: 100%;
+  height: 75px;
+}
 
 .dashboard-search h1,
 .dashboard-search .search-bar {
@@ -106,8 +110,26 @@ main {
 }
 
 .dashboard-search h1 {
-  color: #000;
+  color: #555;
+  font-weight: 200;
+  font-size: 20px;
+  padding: 0 15px;
+  float: left;
+  width: 50%;
 }
+
+.dashboard-search .search-bar {
+  width: 50%;
+  background: #9A9A9A;
+  float: right;
+}
+
+.dashboard-search .search-bar input {
+  float: right;
+  margin: 10px 15px;
+  padding: 10px 25px;
+}
+
 
 
 /*** TABLET - 768px ***/
