--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,13 +113,13 @@ main {
   color: #555;
   font-weight: 200;
   font-size: 20px;
-  padding: 0 15px;
+  padding: 5px 15px;
   float: left;
-  width: 50%;
+  width: 35%;
 }
 
 .dashboard-search .search-bar {
-  width: 50%;
+  width: 65%;
   background: #9A9A9A;
   float: right;
 }
@@ -127,7 +127,10 @@ main {
 .dashboard-search .search-bar input {
   float: right;
   margin: 10px 15px;
-  padding: 10px 25px;
+  padding: 10px 0;
+  width: 85%;
+  border-radius: 4px;
+  border: 1px solid #555;
 }
 
 
