Setup daily traffic chart in app.js, apply styles to daily traffic chart

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -140,7 +140,8 @@ main {
 
 /* Chart - Traffic */
 
-.traffic-chart canvas {
+.traffic-chart canvas,
+.daily-traffic-chart canvas {
   padding: 10px 25px;
 }
 
