Setup mobile-users doughnut chart in app.js, apply styles in CSS

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -141,7 +141,8 @@ main {
 /* Chart - Traffic */
 
 .traffic-chart canvas,
-.daily-traffic-chart canvas {
+.daily-traffic-chart canvas,
+.mobile-users-chart canvas {
   padding: 10px 25px;
 }
 
