--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,9 +5,10 @@
 }
 
 #container {
-  max-width: 1350px;
-  margin: 0 auto;
+    max-width: 1350px;
+    margin: 0 auto;
 }
+
 
 /*** HEADER ***/
 
@@ -42,20 +43,29 @@ header h1 span {
     margin: 0 5px;
 }
 
-.header-identification div, .header-notification img, .header-notification p, .header-profile img, .header-profile p {
+.header-identification div, .header-notification img, .header-notification p, .header-divider p, .header-profile img, .header-profile p {
     display: inline-block;
 }
 
 .header-notification img {
     width: 25px;
     height: 25px;
-    margin: 25px 15px;
+    margin: 25px 0;
 }
 
-.header-notification p {
+.header-notification .notification {
+    background: #91C694;
+    width: 8px;
+    height: 8px;
+    padding: 5%;
+    border-radius: 50%;
+    float: right;
+    margin: 25px 5px 0 0;
+}
+
+.header-divider .divider {
     border-left: 0.5px solid #4D4D6F;
     height: 45px;
-    float: right;
     margin: 15px 5px;
 }
 
@@ -74,12 +84,14 @@ header h1 span {
     margin: 25px 5px;
 }
 
+
 /*** DASHBOARD ***/
 
 #dashboard {
-  width: 100%;
-  position: absolute;
+    width: 100%;
+    position: absolute;
 }
+
 
 /*** NAVIGATION ***/
 
@@ -91,167 +103,156 @@ nav {
 }
 
 nav img {
-  margin: 20px 25px;
-  width: 35px;
-  height: 35px;
+    margin: 20px 25px;
+    width: 35px;
+    height: 35px;
 }
+
 
 /*** MAIN ***/
 
 main {
-  display: inline-block;
-  width: 100%;
+    display: inline-block;
+    width: 100%;
 }
+
 
 /* Dashboard Search */
 
 .dashboard-search {
-  width: 100%;
-  height: 75px;
+    width: 100%;
+    height: 75px;
 }
 
-.dashboard-search h1,
-.dashboard-search .search-bar {
-  display: inline-block;
+.dashboard-search h1, .dashboard-search .search-bar {
+    display: inline-block;
 }
 
-.dashboard-search h1,
-.traffic-chart h1,
-.daily-traffic-chart h1,
-.mobile-users-chart h1,
-.social-media h1 {
-  color: #8E8E8E;
-  font-weight: 200;
-  font-size: 1.2em;
-  padding: 5px 15px;
-  float: left;
+.dashboard-search h1, .traffic-chart h1, .daily-traffic-chart h1, .mobile-users-chart h1, .social-media h1 {
+    color: #8E8E8E;
+    font-weight: 200;
+    font-size: 1.2em;
+    padding: 5px 15px;
+    float: left;
 }
 
 .dashboard-search h1 {
-  width: 35%;
+    width: 35%;
 }
 
-.traffic-chart h1,
-.daily-traffic-chart h1,
-.mobile-users-chart h1,
-.social-media h1 {
-  width: 75%;
+.traffic-chart h1, .daily-traffic-chart h1, .mobile-users-chart h1, .social-media h1 {
+    width: 75%;
 }
 
 .dashboard-search .search-bar {
-  width: 65%;
-  background: #FBFBFB;
-  float: right;
+    width: 65%;
+    background: #FBFBFB;
+    float: right;
 }
 
 .dashboard-search .search-bar input {
-  float: right;
-  margin: 10px 15px;
-  padding: 10px 0;
-  width: 85%;
-  border-radius: 4px;
-  border: 1px solid #B2B2B2;
-  text-indent: 10px;
-  font-size: 0.9em;
+    float: right;
+    margin: 10px 15px;
+    padding: 10px 0;
+    width: 85%;
+    border-radius: 4px;
+    border: 1px solid #B2B2B2;
+    text-indent: 10px;
+    font-size: 0.9em;
 }
+
 
 /* Dashboard Alert */
 
 .dashboard-alert {
-  padding: 15px;
-  margin: 20px 15px;
-  color: #fff;
-  background: #7478BA;
-  border-radius: 4px;
+    padding: 15px;
+    margin: 20px 15px;
+    color: #fff;
+    background: #7478BA;
+    border-radius: 4px;
 }
 
 .dashboard-alert h2 {
-  font-size: 0.7em;
-  font-weight: 200;
+    font-size: 0.7em;
+    font-weight: 200;
 }
 
 .dashboard-alert h2 span {
-  font-weight: 600;
+    font-weight: 600;
 }
 
 .dashboard-alert h2 .close-alert {
-  float: right;
-  cursor: pointer;
+    float: right;
+    cursor: pointer;
 }
+
 
 /* Chart - Traffic */
 
-.traffic-chart canvas,
-.daily-traffic-chart canvas,
-.mobile-users-chart canvas {
-  padding: 10px 25px;
+.traffic-chart canvas, .daily-traffic-chart canvas, .mobile-users-chart canvas {
+    padding: 10px 25px;
 }
+
 
 /* Social Media */
 
 .social-row {
-  text-align: center;
+    text-align: center;
 }
 
 .social-widget {
-  background: #FBFBFB;
-  border: 1px solid #B2B2B2;
-  border-radius: 4px;
-  width: 60%;
-  height: auto;
-  padding: 10px 15px;
-  margin: 10px;
-  clear: both;
-  display: inline-block;
-  position: relative;
+    background: #FBFBFB;
+    border: 1px solid #B2B2B2;
+    border-radius: 4px;
+    width: 60%;
+    height: auto;
+    padding: 10px 15px;
+    margin: 10px;
+    clear: both;
+    display: inline-block;
+    position: relative;
 }
 
 .social-widget img {
-  float: left;
-  margin: 0 15px;
-  width: 25%;
-  padding: 5%;
-  background: #7478BA;
-  border: 1px solid #7478BA;
-  border-radius: 50%;
+    float: left;
+    margin: 0 15px;
+    width: 25%;
+    padding: 5%;
+    background: #7478BA;
+    border: 1px solid #7478BA;
+    border-radius: 50%;
 }
 
-.social-widget h4,
-.social-widget p {
-  text-align: left;
+.social-widget h4, .social-widget p {
+    text-align: left;
 }
 
 .social-widget h4 {
-  color: #7478BA;
+    color: #7478BA;
 }
 
 .social-widget p {
-  color: #8E8E8E;
-  font-size: 2em;
-  padding: 2% 0;
+    color: #8E8E8E;
+    font-size: 2em;
+    padding: 2% 0;
 }
 
 
 /*** TABLET - 768px ***/
 
 @media screen and (min-width: 768px) {
-
-  /*** HEADER ***/
-
+    /*** HEADER ***/
     header h1 {
         font-size: 1.6em;
     }
-
     .header-profile p {
-      font-size: 1.2em;
+        font-size: 1.2em;
     }
-
     .dashboard-alert h2 {
-      font-size: 1.2em;
+        font-size: 1.2em;
     }
-
     .social-widget {
-      width: 30%;
+        width: 30%;
     }
 }
 
@@ -259,63 +260,50 @@ main {
 /*** DESKTOP - 1024px ***/
 
 @media screen and (min-width: 1024px) {
-
-  nav {
-    width: 7.5%;
-    height: 1800px;
-    min-width: 75px;
-    max-width: 100px;
-    display: block;
-    float: left;
-  }
-
-  main {
-    width: 92.5%;
-    max-width: 1250px;
-    display: block;
-    float: left;
-  }
-
-  .charts-container {
-    border-top: 2px solid #8E8E8E;
-    border-bottom: 2px solid #8E8E8E;
-    margin-top: 25px;
-    float: left;
-  }
-
-  .daily-traffic-chart,
-  .mobile-users-chart {
-    width: 50%;
-  }
-
-  .daily-traffic-chart {
-    float: left;
-  }
-
-  .mobile-users-chart {
-    float: right;
-    border-left: 2px solid #8E8E8E;
-  }
-
-  .charts-container .daily-traffic-chart canvas,
-  .charts-container .mobile-users-chart canvas {
-    max-height: 400px;
-  }
-
-  .charts-container .daily-traffic-chart canvas {
-    margin: 100px auto 0;
-  }
-
-  .charts-container .mobile-users-chart canvas {
-    max-width: 400px;
-    margin: 0 auto;
-  }
-
-  .social-media {
-   clear: both;
-  }
-
-  .social-widget p {
-    font-size: 2.5em;
-  }
+    nav {
+        width: 7.5%;
+        height: 1800px;
+        min-width: 75px;
+        max-width: 100px;
+        display: block;
+        float: left;
+    }
+    main {
+        width: 92.5%;
+        max-width: 1250px;
+        display: block;
+        float: left;
+    }
+    .charts-container {
+        border-top: 2px solid #8E8E8E;
+        border-bottom: 2px solid #8E8E8E;
+        margin-top: 25px;
+        float: left;
+    }
+    .daily-traffic-chart, .mobile-users-chart {
+        width: 50%;
+    }
+    .daily-traffic-chart {
+        float: left;
+    }
+    .mobile-users-chart {
+        float: right;
+        border-left: 2px solid #8E8E8E;
+    }
+    .charts-container .daily-traffic-chart canvas, .charts-container .mobile-users-chart canvas {
+        max-height: 400px;
+    }
+    .charts-container .daily-traffic-chart canvas {
+        margin: 100px auto 0;
+    }
+    .charts-container .mobile-users-chart canvas {
+        max-width: 400px;
+        margin: 0 auto;
+    }
+    .social-media {
+        clear: both;
+    }
+    .social-widget p {
+        font-size: 2.5em;
+    }
 }
