Setup membership-container, members-widget, activity-widget in index.html, apply styles to membership container elements

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,7 +128,7 @@ main {
     display: inline-block;
 }
 
-.dashboard-search h1, .traffic-chart h1, .daily-traffic-chart h1, .mobile-users-chart h1, .social-media h1 {
+.dashboard-search h1, .traffic-chart h1, .daily-traffic-chart h1, .mobile-users-chart h1, .social-media h1, .members-widget h1, .activity-widget h1 {
     color: #8E8E8E;
     font-weight: 200;
     font-size: 1.2em;
@@ -274,19 +274,20 @@ main {
         display: block;
         float: left;
     }
-    .charts-container {
+    .charts-container,
+    .membership-container {
         border-top: 2px solid #8E8E8E;
         border-bottom: 2px solid #8E8E8E;
         margin-top: 25px;
         float: left;
     }
-    .daily-traffic-chart, .mobile-users-chart {
+    .daily-traffic-chart, .mobile-users-chart, .members-widget, .activity-widget {
         width: 50%;
     }
-    .daily-traffic-chart {
+    .daily-traffic-chart, .members-widget {
         float: left;
     }
-    .mobile-users-chart {
+    .mobile-users-chart, .activity-widget {
         float: right;
         border-left: 2px solid #8E8E8E;
     }
