Added comment for settings section in styles.css, added container div for settings and linked to css toggle switch in index.html

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -297,13 +297,8 @@ main {
 
 /* Message User */
 
-.settings-container {
-  clear: both;
-}
-
 .message-user {
   width: 90%;
-  display: inline-block;
   margin: 0 5%;
 }
 
@@ -336,6 +331,10 @@ main {
   font-size: 20px;
   border: 1px solid #7478BA;
 }
+
+/* Settings */
+
+
 
 /*** TABLET - 768px ***/
 
