Apply custom styles to timezone select element

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -367,6 +367,13 @@ main {
   border-color: #7478BA;
 }
 
+.user-timezone select {
+  margin: 0 2.5%;
+  width: 95%;
+  font-size: 20px;
+  color: #8E8E8E;
+}
+
 /*** TABLET - 768px ***/
 
 @media screen and (min-width: 768px) {
