Refactor background color for message alerts, refactor message alerts display so user and message alert disappears if input value is present

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -338,6 +338,15 @@ main {
   display: none;
 }
 
+#user-alert,
+#message-alert {
+  background: #ff8080;
+}
+
+#send-message-alert {
+  background: #91C694;
+}
+
 /* Settings */
 
 .user-settings {
